# gitterm

./: .gitignore  BUILD.md  Cargo.toml  Info.plist  README.md  build.rs  debug_freezes.sh  freeze_debug.patch  run_with_freeze_debug.sh
.claude/: resume.md
.github/workflows/: build.yml  ci.yml  windows-build.yml
.plans/: CHECKPOINT.md
assets/excalidraw/: viewer.html
docs/: ENTIRE-IO-RESEARCH.md  PERFORMANCE_TUNING.md
scripts/: bundle.sh
src/: agent.rs  config.rs  events.rs  excalidraw.rs  log_server.rs  main.rs  markdown.rs  services.rs  theme.rs  webview.rs
