[package]
name = "gitterm"
version = "0.1.0"
edition = "2021"
description = "A Git status viewer with integrated terminal, built with Iced"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_term = { path = "../iced_term_fork" }
muda = "0.17"
wry = "0.48"
pulldown-cmark = "0.12"
git2 = "0.19"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
similar = "2.6"
warp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
winres = "0.1"
