[package]
name = "gitterm"
version = "0.1.0"
edition = "2021"
description = "A Git status viewer with integrated terminal, built with Iced"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_term = { path = "../iced_term_fork" }
muda = "0.17"
wry = "0.48"
pulldown-cmark = "0.12"
git2 = "0.19"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
similar = "2.6"
warp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util"] }
chrono = "0.4"
libc = "0.2"
whisper-rs = { version = "0.15", optional = true }
cpal = { version = "0.15", optional = true }

[features]
default = []
stt = ["whisper-rs", "cpal"]

[package.metadata.bundle]
name = "GitTerm"
identifier = "com.cree8.gitterm"
icon = ["assets/icon.icns"]
version = "0.1.0"
short_description = "A Git status viewer with integrated terminal"
copyright = "Copyright 2025 Cree8"
category = "Developer Tool"
osx_minimum_system_version = "13.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"
